# Mc-Chess

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  board.cpp  board.h  main.cpp  move.h  piece.h  position.cpp  position.h
.github/workflows/: deploy-frontend.yml
backend/src/: main.cpp
backend/src/engine/: board.cpp  board.h  direction_constants.cpp  direction_constants.h  eval.cpp  eval.h  move.h  move_gen_helpers.cpp  move_gen_helpers.h  piece.h  piece_movement.cpp  piece_movement.h  position.cpp  position.h  zobrist.cpp  zobrist.h
backend/src/game/: game.cpp  game.h
backend/tests/: test_board.cpp
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Message.tsx
frontend/src/components/: ChessGame.tsx  ListGroup.tsx
frontend/src/services/: api.ts
src/: board.cpp  board.h  game.cpp  game.h  main.cpp  move.h  piece.h  pin.h  position.cpp  position.h
tests/: test_board.cpp
